# PyHDL

./: .coverage  MANIFEST.in  MyPYHDLProject.py  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_project.vhd  tox.ini
.github/workflows/: tests.yml
examples/2D Array/: 2DArray.py  array_2d.vhdl
examples/Enum/: Enum.py  EnumExample.vhdl
examples/Example2/: example.py
examples/FSM/: FSMExample.vhdl  fsm.py
examples/Getting Started/: GettingStarted.py  MyPackage.vhd  getting_started.vhd
examples/MAC/: MAC.py
examples/Packages and Procedures/: MyPackage.vhd  PackAndProc.py
examples/SMX/: smx_example.py
src/pyhdl2/: __init__.py  architecture.py  arithmetic.py  check.py  component.py  concurrent.py  conditional.py  core.py  entity.py  enum.py  fsm.py  function.py  gen.py  module.py  optimize.py  package.py  procedure.py  process.py  project.py  pyhdl.py  record.py  signal.py  statements.py  std_lib.py  subprogram.py  type.py  types.py
src/pyhdl2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyhdl2/VHDL/: architecture.vhdl  component.vhdl  conditional.vhdl  entity_empty.vhdl  (+5 more)
tests/: .coverage  test_architecture.py  test_component.py  test_concurrent.py  test_conditional.py  test_core.py  test_entity.py  test_enum.py  test_fsm.py  test_function.py  test_module.py  test_optimizer.py  test_package.py  test_phdl.py  test_procedure.py  test_process.py  test_project.py  test_record.py  test_signals.py  test_stack_optimization.py  test_statements.py  test_std_lib.py  test_type.py
(+1 files in other folders)
