[metadata]
name = pyhdl2
description = PyHDL2
author = Daniel Pietz
license = MIT
license_file = LICENSE
platforms = unix, linux, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    pyhdl2
install_requires =
    py_mini_racer>=0.6.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no


[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
pyhdl2 = py.typed

[flake8]
max-line-length = 160